--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -43,7 +43,7 @@
                         <phase>generate-resources</phase>
                         <!-- Optional configuration which provides for running any npm command -->
                         <configuration>
-                            <arguments>install --legacy-peer-deps</arguments>
+                            <arguments>ci --legacy-peer-deps</arguments>
                         </configuration>
                     </execution>
                     <!-- Build and minify static files -->
