--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
@@ -22,7 +23,8 @@
     "sass-loader": "^13.3.2",
     "v-calendar": "^3.0.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.6",
