fix human time parser, add closed field to tasks

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     #  defer-datasource-initialization: true
     database-platform: org.hibernate.community.dialect.SQLiteDialect
-    hibernate.ddl-auto: validate
+    hibernate.ddl-auto: update
   security:
     user:
       name: ${USER_NAME}
