--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,13 +23,16 @@
     "sass-loader": "^13.3.2",
     "v-calendar": "^3.0.3",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2",
     "vue3-apexcharts": "^1.4.4"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^3.0.0",
     "@babel/core": "^7.22.6",
     "@babel/eslint-parser": "^7.22.6",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/bootstrap": "^5.2.6",
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
@@ -47,6 +50,7 @@
     "cypress": "^12.16.0",
     "eslint": "^8.44.0",
     "eslint-plugin-vue": "^9.15.1",
+    "vue-cli-plugin-i18n": "~2.3.1",
     "jest": "^29.6.0",
     "ts-jest": "^29.1.1",
     "typescript": "~5.1.6",
