--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,47 @@ on:
       - main
 
 jobs:
-  build_and_deploy:
-    runs-on: ubuntu-latest
+  build_job:
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: 17
+          distribution: 'zulu'
+          java-version: '17.0.0+35'
+          cache: 'maven'
 
       - name: Build with Maven
-        run: mvn install
+        run: mvn -B install --no-transfer-progress
+
+      - name: Archive .jar file
+        uses: actions/upload-artifact@v3
+        with:
+          name: app-jar
+          path: backend/target/backend-0.0.1-SNAPSHOT.jar
+          if-no-files-found: error
+
+    outputs:
+      jar-file: ${{ runner.workspace }}/app.jar  # Declare the artifact output
+
+
+  docker_deploy_job:
+    runs-on: ubuntu-latest
+    needs: build_job
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download .jar file
+        uses: actions/download-artifact@v3
+        with:
+          name: app-jar
+          path: backend/target
 
       - name: Build Docker image
         run: |
