--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,6 +20,7 @@
         <!-- backend dependencies -->
         <rest-assured.version>5.3.1</rest-assured.version>
         <postgresql.version>42.6.0</postgresql.version>
+        <lucene.version>9.7.0</lucene.version>
         <!-- <groovy.version>3.0.16</groovy.version>-->
     </properties>
 
@@ -77,6 +78,31 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.42.0.0</version>
+        </dependency>
+
+        <!-- Full-text search -->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+            <version>8.11.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-highlighter</artifactId>
+            <version>${lucene.version}</version>
         </dependency>
 
         <!-- Testing -->
