--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build_job:
+  build:
     runs-on: macos-latest
 
     steps:
@@ -31,9 +31,9 @@ jobs:
           if-no-files-found: error
 
 
-  docker_deploy_job:
+  docker_build:
     runs-on: ubuntu-latest
-    needs: build_job
+    needs: build
 
     steps:
       - name: Checkout code
@@ -56,13 +56,22 @@ jobs:
       - name: Push Docker image
         run: docker push vlavik007/worknote:latest
 
-#      - name: Deploy to remote server
-#        uses: appleboy/ssh-action@v0.3.0
-#        with:
-#          host: ${{ secrets.REMOTE_HOST }}
-#          username: ${{ secrets.REMOTE_USERNAME }}
-#          key: ${{ secrets.SSH_PRIVATE_KEY }}
-#          port: ${{ secrets.REMOTE_PORT }}
-#          script: |
-#            docker-compose pull
-#            docker-compose up -d
+
+  deployment:
+    runs-on: ubuntu-latest
+    needs: docker_build
+    environment: production
+
+    steps:
+      - name: Deploy to remote server
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.REMOTE_PORT }}
+          fingerprint: ${{ secrets.REMOTE_FINGERPRINT }}
+          script: |
+            cd worknote
+            docker-compose pull
+            docker-compose up -d
