README.md updates; add workflow for pull requests

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>es.e1sordo</groupId>
         <artifactId>worknote</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
