--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: app-jar
-          path: backend/target/backend-0.0.1-SNAPSHOT.jar
+          path: backend/target/backend-1.0.0.jar
           if-no-files-found: error
 
 
