--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -33,7 +31,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@intlify/vue-i18n-loader": "^3.0.0",
     "@types/bootstrap": "^5.2.6",
-    "@types/jest": "^29.5.2",
+    "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vue/cli-plugin-babel": "^5.0.8",
@@ -41,17 +39,11 @@
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
     "@vue/cli-plugin-typescript": "^5.0.8",
-    "@vue/cli-plugin-unit-jest": "~5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.4.0",
-    "@vue/vue3-jest": "^29.2.4",
-    "babel-jest": "^29.6.0",
-    "cypress": "^4.2.0",
+    "@vue/runtime-core": "^3.5.13",
     "eslint": "^8.44.0",
     "eslint-plugin-vue": "^9.15.1",
-    "jest": "^29.6.0",
-    "ts-jest": "^27.0.4",
     "typescript": "~5.1.6",
     "vue-cli-plugin-i18n": "~2.3.1",
     "webpack": "^5.88.1"
